--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -300,7 +300,7 @@
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
-                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/vibrato.maxpat">Vibrato</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/fm.maxpat">FM</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/random.maxpat">Random</a></li>
                               <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/random_numeri_casuali_per_bande.maxpat">Numeri Casuali per Bande</a></li>
