--- a/pages/learn/elementi_di_composizione/silenzio.html
+++ b/pages/learn/elementi_di_composizione/silenzio.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Leggi della Gestalt</title>
+  <title>Silenzio</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -77,54 +77,43 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Elementi di Composizione</h3>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Silenzio</strong></h4>
             </div>
         </div>
     </div>
 </section>
 
-
-  <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
   <!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-    <div class="container">
-        <div class="title-wrapper mb-5">
-        </div>
-        <div class="row align-items-center">
-            <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-            </div>
-            <div class="col-12 col-lg">
-                <div class="text-wrapper">
-                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
-                    </h5>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+  <section data-bs-version="5.1" class="video2 cid-sZZQSw4Rn5" id="video2-2g">
+  <div class="container">
+          <div class="mbr-section-head">
+              <h4 class="mbr-section-title mbr-fonts-style mb-0 display-5">
+                  <strong>John Cage - 4'33"</strong></h4>
+          </div>
+          <div class="row justify-content-center mt-4">
+              <div class="col-12 col-md-5 video-block">
+                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/JTEFKFiXSx4" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              </div>
+          </div>
+      </div>
+  </section>
 
-<br>
-<br>
+
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
+
 
 
 <!-- Prev/Next-->
