--- a/pages/learn/elementi_di_composizione/ripetizione_variazione.html
+++ b/pages/learn/elementi_di_composizione/ripetizione_variazione.html
@@ -84,21 +84,51 @@
     </div>
 </section>
 
-
-  <!-- Video-->
-  <section data-bs-version="5.1" class="video2 cid-sZZQSw4Rn5" id="video2-2g">
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
   <div class="container">
-          <div class="mbr-section-head">
-              <h4 class="mbr-section-title mbr-fonts-style mb-0 display-5">
-                  <strong>John Cage - 4'33"</strong></h4>
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/plL2VDAoThU" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
           </div>
-          <div class="row justify-content-center mt-4">
-              <div class="col-12 col-md-5 video-block">
-                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/plL2VDAoThU" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>John Cage - 4'33" (1952)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+
+                  </p>
               </div>
           </div>
       </div>
-  </section>
+  </div>
+</section>
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/hB8ws_vou28" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Fausto Romitelli - Professor Bad Trip, Lesson 1 (1998)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
 
 
 <!-- Text-->
