--- a/pages/learn/elementi_di_composizione/struttura_formale.html
+++ b/pages/learn/elementi_di_composizione/struttura_formale.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Ripetizione - Variazione</title>
+  <title>Struttura Formale</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -77,12 +77,13 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Elementi di Composizione</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Ripetizione - Variazione</strong></h4>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Struttura Formale</strong></h4>
             </div>
         </div>
     </div>
 </section>
+
 
 <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
@@ -91,12 +92,12 @@
       </div>
       <div class="row align-items-center">
           <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/plL2VDAoThU" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/hB8ws_vou28" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
           </div>
           <div class="col-12 col-lg">
               <div class="text-wrapper">
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>Steve Reich - Electric Counterpoint (2010)</strong>
+                      <strong>Fausto Romitelli - Professor Bad Trip, Lesson 1 (1998)</strong>
                   </h5>
                   <p class="mbr-text mbr-fonts-style display-7">
 
@@ -108,18 +109,19 @@
 </section>
 
 
-<!-- Text-->
-<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12 col-lg-8">
-                <p class="mbr-text mbr-fonts-style display-7">
 
-                </p>
-              </div>
-          </div>
-      </div>
-  </section>
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-8">
+                  <p class="mbr-text mbr-fonts-style display-7">
+
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
