--- a/pages/learn/elementi_di_composizione/ripetizione_variazione.html
+++ b/pages/learn/elementi_di_composizione/ripetizione_variazione.html
@@ -96,10 +96,10 @@
           <div class="col-12 col-lg">
               <div class="text-wrapper">
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>Steve Reich - Electric Counterpoint (2010)</strong>
+                      <strong>Steve Reich - Electric Counterpoint (1987)</strong>
                   </h5>
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Electric Counterpoint (1987) è stato commissionato dal Next Wave Festival della Brooklyn Academy of Music per il chitarrista Pat Metheny. È stato composto durante l'estate del 1987.
                   </p>
               </div>
           </div>
