--- a/pages/learn/elementi_di_composizione/ripetizione_variazione.html
+++ b/pages/learn/elementi_di_composizione/ripetizione_variazione.html
@@ -108,6 +108,55 @@
   </div>
 </section>
 
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/nIs3jechQ_E" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>György Ligeti - Musica Ricercata [1/11] (1951-1953)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Primo brano di una serie di undici, ad ogni brano successivo si aggiunge una nota.
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/E9PiL5icwic" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Giacinto Scelsi - Quattro pezzi per orchestra (ciascuno su una nota sola) (1959)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    "Il Centro è, prima di tutto, l’origine, il punto di partenza di tutte le cose; è il punto principiale, senza forma e senza dimensioni, dunque invisibile, e, di conseguenza, la sola immagine che si possa dare dell’Unità primordiale. Da esso sono prodotte, per irradiazione, tutte le cose" - G. Scelsi
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
 <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
   <div class="container">
