--- a/pages/learn/elementi_di_composizione/ripetizione_variazione.html
+++ b/pages/learn/elementi_di_composizione/ripetizione_variazione.html
@@ -140,7 +140,7 @@
       </div>
       <div class="row align-items-center">
           <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/E9PiL5icwic" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/MfTjz6emd7c" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
           </div>
           <div class="col-12 col-lg">
               <div class="text-wrapper">
