--- a/pages/learn/elementi_di_composizione/silenzio.html
+++ b/pages/learn/elementi_di_composizione/silenzio.html
@@ -114,7 +114,11 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8">
                 <p class="mbr-text mbr-fonts-style display-7">
-
+                  <ol>
+                    <li>Separatore di suoni</li>
+                    <li>Assenza di suono</li>
+                    <li>Presenza di silenzio</li>
+                  </ol>
                 </p>
               </div>
           </div>
