--- a/pages/learn/storia_elettroacustica/analisi_della_musica_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica/analisi_della_musica_elettroacustica.html
@@ -166,8 +166,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
