--- a/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html
+++ b/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html
@@ -145,8 +145,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/john_chowning.html">&lt; Previous</a>
                     <br>
                     <br>
             </div>
