--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -283,7 +283,7 @@
                             <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_prima_parte.html#content5-1d" title="content5-1d">Computer Music</a></li>
                             <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/jean_claude_risset.html">Musica Digitale</a></li>
                             <li><a href="https://www.gabrielavelitch.com/pages/learn/elementi_di_composizione/silenzio.html">Silenzio</a></li>
-                            <li><a href="https://www.gabrielavelitch.com/pages/learn/elementi_di_composizione/suonoforma.html">Suonoforma</a></li>
+                            <li><a href="">Suonoforma</a></li>
                             <li><a href="https://www.gabrielavelitch.com/pages/learn/elementi_di_composizione/ripetizione_variazione.html">Ripetizione - Variazione</a></li>
                             <li><a href="https://www.gabrielavelitch.com/pages/learn/elementi_di_composizione/struttura_formale.html">Struttura formale</a></li>
                             </ul>
