--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -16,7 +16,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Laboratorio di Tecnologie Musicali - Storia della Musica Elettroacustica, Elementi di Composizione, Sintesi Sonora">
   <meta name="robots" content="index" />
 
 
