--- a/pages/learn/elementi_di_composizione/ripetizione_variazione.html
+++ b/pages/learn/elementi_di_composizione/ripetizione_variazione.html
@@ -205,6 +205,30 @@
 </section>
 
 
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/fL_A3v8nZrs" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Ryoji Ikeda - micro | macro (2015)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
 <!-- Text-->
 <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
     <div class="container">
