--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -228,8 +228,8 @@
               <div class="col-12 col-md-10">
                   <blockquote>
                   <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
-                  <p class="mbr-text mbr-fonts-style display-4"
-                  >Con le tecniche di sintesi discusse durante la lezione "<strong>Week 1</strong>":
+                  <p class="mbr-text mbr-fonts-style display-4">
+                  Con le tecniche di sintesi discusse durante la lezione "<strong>Week 1</strong>":
                   <br><br>- creare 10 suoni
                   <br>- durata suono: 20ms &lt; 10s
                   <br>- campionare i suoni ottenuti
@@ -327,7 +327,36 @@
                   <blockquote>
                   <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
                   <p class="mbr-text mbr-fonts-style display-4">
-
+                    <br>- creare una cartella condivisa nominandola "catalogo_sonoro_gruppo_X" con tre subcartelle nominate rispettivamente: punti, linee, superfici.
+                    <br>
+                    Con le tecniche di sintesi discusse durante la lezione "<strong>Week 2</strong>":
+                    <br><br>- creare suoni, suoniforma e/o patch
+                    <br>- registrare e salvare i suoni ottenuti nominandoli secondo la loro "classe d'appartenza + X + qualità principale" nella relativa subcartella. (es. /punti/punto_01_rugoso).
+                    <br>- in caso di suoni variati, nominarli in questo modo: punto_01_01_rugoso_acuto; punto_01_02_rugoso_grave;
+                    <br>
+                    Esempio di struttura del catalogo sonoro:
+                    <br><br>
+                    <ul>
+                      <li>catalogo_sonoro_gruppo_1/</li>
+                      <ul>
+                        <li>punti/</li>
+                        <ul>
+                            <li>pun_01_01_rugoso_acuto</li>
+                            <li>pun_01_02_rugoso_grave</li>
+                            <li>pun_02_01_impulso_brillante</li>
+                        </ul>
+                        <li>linee</li>
+                          <ul>
+                            <li>lin_01_01_glissando_ascendente</li>
+                            <li>lin_01_02_glissando_discendente</li>
+                            <li>lin_02_01_melodia</li>
+                          </ul>
+                      <li>superfici/</li>
+                        <ul>
+                            <li>sup_01_01_fascia_statica</li>
+                            <li>sup_01_02_fascia_vibrante</li>
+                            <li>sup_02_01_armonia_dissonante</li>
+                    </ul></ul>
                   </p></blockquote>
               </div>
           </div>
