--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -309,7 +309,7 @@
                             </ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/panning.zip">Panning</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/poly.zip">Poly</a></li>
-                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/week_2.maxpat">Week 2 - patch riassuntiva</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/week_2.zip">Week 2 - patch riassuntiva</a></li>
                             </ul>
                           </h5>
                       </div>
