--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/maxmsp-551x301.jpg" alt="">
+                        <img src="img/site/maxmsp-551x301.webp" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Sound Design</strong></h5>
@@ -143,7 +143,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/dibox-551x301.jpg" alt="">
+                        <img src="img/sito/dibox-551x301.jpg" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Dual Channel DI Box</strong></h5>
