--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/corkino-550x301.jpg" alt="">
+                        <img src="img/site/corkino-550x301.webp" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>corkino</strong></h5>
