--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/bertoncini-550x301.jpg" data-slide-to="0" data-bs-slide-to="0" alt="">
+                        <img src="img/site/bertoncini-550x301.webp" data-slide-to="0" data-bs-slide-to="0" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Isabella Scelsi Foundation</strong></h5>
@@ -234,7 +234,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/scecilia-551x301.jpg" data-slide-to="1" data-bs-slide-to="1" alt="">
+                        <img src="img/site/scecilia-551x301.webp" data-slide-to="1" data-bs-slide-to="1" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Conservatory Santa Cecilia</strong></h5>
@@ -246,7 +246,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/crm-551x301.jpg" data-slide-to="2" data-bs-slide-to="2">
+                        <img src="img/site/crm-551x301.webp" data-slide-to="2" data-bs-slide-to="2">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Centro Ricerche Musicali</strong></h5>
