--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -141,6 +141,9 @@
 </section>
 
 
+<iframe src="https://drive.google.com/embeddedfolderview?id=16CAtLXFsGklV-MHQAJSlw9EKc0sS_Z4B#grid" style="width:100%; height:600px; border:0;"></iframe>
+
+
   <!-- Week 1-->
 
   <section data-bs-version="5.1" class="features19 cid-sZl8n0cr2l" id="features20-2c">
