--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -141,7 +141,7 @@
 </section>
 
 
-<iframe src="https://drive.google.com/embeddedfolderview?id=16CAtLXFsGklV-MHQAJSlw9EKc0sS_Z4B#grid" style="width:100%; height:600px; border:0;"></iframe>
+<iframe src="https://drive.google.com/embeddedfolderview?id=16CAtLXFsGklV-MHQAJSlw9EKc0sS_Z4B#list" style="width:100%; height:600px; border:0;"></iframe>
 
 
   <!-- Week 1-->
