--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -351,6 +351,7 @@
                     Esempio di struttura del catalogo sonoro:
                     <br><br>
                     <ul>
+                      <p class="mbr-text mbr-fonts-style display-4">
                       <li>catalogo_sonoro_gruppo_1/</li>
                       <ul>
                         <li>punti/</li>
