--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -359,7 +359,7 @@
                             <li>pun_01_02_rugoso_grave</li>
                             <li>pun_02_01_impulso_brillante</li>
                         </ul>
-                        <li>linee</li>
+                        <li>linee/</li>
                           <ul>
                             <li>lin_01_01_glissando_ascendente</li>
                             <li>lin_01_02_glissando_discendente</li>
