--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -433,7 +433,7 @@
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
-
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/granulatore.maxpat">Granulatore</a></li>
                             </ul>
                           </h5>
                       </div>
