--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -399,22 +399,7 @@
                       </div>
                       <div class="text-box">
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
-                              <strong>Storia della Musica Elettroacustica</strong>
-                          </h4>
-                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            <ul>
-
-                              </ul>
-                          </h5>
-                      </div>
-                  </div>
-                  <div class="item mbr-flex">
-                      <div class="icon-box">
-                          <span class="step-number mbr-fonts-style display-5">2</span>
-                      </div>
-                      <div class="text-box">
-                          <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
-                              <strong>Elementi di Composizione e Grafizzazione</strong>
+                              <strong>Ascolto e Analisi Elaborati</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
@@ -434,6 +419,7 @@
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/granulatore.maxpat">Granulatore</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/effects.zip">Effects</a></li>
                             </ul>
                           </h5>
                       </div>
