--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -420,6 +420,7 @@
                             <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/granulatore.maxpat">Granulatore</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/effects.zip">Effects</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/week_3.zip">Week 3 - patch riassuntiva</a></li>
                             </ul>
                           </h5>
                       </div>
