--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -97,7 +97,7 @@
             <div class="col-12 col-md-8">
                 <ul class="nav nav-tabs mb-4" role="tablist">
                     <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab0" aria-selected="true"><strong>Control</strong></a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab1" aria-selected="true"><strong>Synthesies</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab1" aria-selected="true"><strong>Synthesis</strong></a></li>
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab2" aria-selected="true"><strong>Filters</strong></a></li>
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab3" aria-selected="true"><strong>Gen</strong></a></li>
                 </ul>
