--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -233,6 +233,7 @@
  <script src="https://www.gabrielavelitch.com/assets/ytplayer/index.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
+ <script src="https://www.gabrielavelitch.com/assets/mbr-tabs/mbr-tabs.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
  <script>
  includeHTML();
