--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -106,8 +106,12 @@
                             <div class="col-md-12">
                               <p class="mbr-fonts-style panel-text display-7">
                                 <strong>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/inviluppo.maxpat" class="text-primary"><b>invilupo</b></a>
-
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/inviluppo.maxpat" class="text-primary"><b>inviluppo</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/glissando.maxpat" class="text-primary"><b>glissando</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/maschera_di_tendenza.maxpat" class="text-primary"><b>maschera di tendenza</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random.maxpat" class="text-primary"><b>random</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random_numeri_casuali_per_bande.maxpat" class="text-primary"><b>random numeri casuali per bande</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/panning.maxpat" class="text-primary"><b>panning</b></a>
                                 </strong>
                                 </p>
                             </div>
