--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -111,7 +111,7 @@
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/maschera_di_tendenza.maxpat" class="text-primary"><b>maschera di tendenza</b></a>
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random.maxpat" class="text-primary"><b>random</b></a>
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random_numeri_casuali_per_bande.maxpat" class="text-primary"><b>random numeri casuali per bande</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/panning.maxpat" class="text-primary"><b>panning</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/panning.zip" class="text-primary"><b>panning</b></a>
                                 </strong>
                                 </p>
                             </div>
@@ -120,11 +120,16 @@
                     <div id="tab2" class="tab-pane" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text mbr-fonts-style display-7">
-                                    Mobile web traffic overtook desktop one in 2016 and will only grow, and that's why
-                                    it's important to create websites that look good on all devices. No special actions
-                                    required, all sites you make with the Builder are mobile-friendly. You don't have to
-                                    create a special mobile version of your website, it will adapt automagically. </p>
+                              <p class="mbr-fonts-style panel-text display-7">
+                                <strong>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>inviluppo</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/sintesi_additiva.maxpat" class="text-primary"><b>glissando</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/am_rm.maxpat" class="text-primary"><b>maschera di tendenza</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/fm.maxpat" class="text-primary"><b>random</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/poly.zipt" class="text-primary"><b>random numeri casuali per bande</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/granulatore.maxpat" class="text-primary"><b>panning</b></a>
+                                </strong>
+                                </p>
                             </div>
                         </div>
                     </div>
