--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -122,12 +122,12 @@
                             <div class="col-md-12">
                               <p class="mbr-fonts-style panel-text display-7">
                                 <strong>
-                                  - <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>inviluppo</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/sintesi_additiva.maxpat" class="text-primary"><b>glissando</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/am_rm.maxpat" class="text-primary"><b>maschera di tendenza</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/fm.maxpat" class="text-primary"><b>random</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/poly.zipt" class="text-primary"><b>random numeri casuali per bande</b></a>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/granulatore.maxpat" class="text-primary"><b>panning</b></a>
+                                  - <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>oscillatore sinusoidale</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/sintesi_additiva.maxpat" class="text-primary"><b>sintesi additiva</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/am_rm.maxpat" class="text-primary"><b>am/rm</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/fm.maxpat" class="text-primary"><b>fm</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/poly.zipt" class="text-primary"><b>poly</b></a>
+                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/granulatore.maxpat" class="text-primary"><b>granulatore</b></a>
                                 </strong>
                                 </p>
                             </div>
