--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -145,6 +145,7 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a>
                                 </ul>
+                                <p class="mbr-text mbr-fonts-style display-7">
                                   FILTERS
                                   <ul>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
@@ -157,9 +158,13 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a>
                                 </ul>
                                 EFFECTS & REVERBS
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                  <ul>
                                 <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
                                 <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a>
                                 <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/flanger.html" class="text-primary"><b>flanger</b></a>
+                                  </ul>
+                                  <br>
                                   </strong>
                             </div>
                         </div>
