--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -177,7 +177,24 @@
                             </div>
                         </div>
                     </div>
-                  
+                    <div id="tab4" class="tab-pane" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                              <p class="mbr-fonts-style panel-text display-7">
+                                <strong>
+                                  <ul>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>oscillatore sinusoidale</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/sintesi_additiva.maxpat" class="text-primary"><b>sintesi additiva</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/am_rm.maxpat" class="text-primary"><b>am/rm</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/fm.maxpat" class="text-primary"><b>fm</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/poly.zipt" class="text-primary"><b>poly</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/granulatore.maxpat" class="text-primary"><b>granulatore</b></a></li>
+                                    </ul>
+                                </strong>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
