--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -341,7 +341,7 @@
                   <blockquote>
                   <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
                   <p class="mbr-text mbr-fonts-style display-4">
-                    <br>- creare una cartella condivisa nominandola "catalogo_sonoro_gruppo_X" con tre subcartelle nominate rispettivamente: punti, linee, superfici.
+                    - creare una cartella condivisa nominandola "catalogo_sonoro_gruppo_X" con tre subcartelle nominate rispettivamente: punti, linee, superfici.
                     <br><br>
                     Con le tecniche di sintesi discusse durante la lezione "<strong>Week 2</strong>":
                     <br><br>- creare suoni, suoniforma e/o patch
@@ -438,7 +438,10 @@
                   <blockquote>
                   <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
                   <p class="mbr-text mbr-fonts-style display-4">
-
+                    <strong>AUDIO</strong>
+                    <br>
+                    <strong>VIDEO</strong>
+                    - scegliere il <a href="https://drive.google.com/drive/folders/1oTIU1EzG0LqTZYouC_KnUDc5oJRhR52D">video da sonorizzare</a> (intero o parziale senza limiti di durata)
                 </p>
               </blockquote>
               </div>
