--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -151,6 +151,7 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a></li>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a></li>
                                 </ul>
+                                </p>
                                 <p class="mbr-text mbr-fonts-style display-7">
                                 <strong>
                                   FILTERS
@@ -164,6 +165,7 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>comb IIR vs FIR</b></a></li>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></li>
                                 </ul>
+                                </p>
                                 <p class="mbr-text mbr-fonts-style display-7">
                                 <strong>
                                 EFFECTS & REVERBS
@@ -181,18 +183,18 @@
                     <div id="tab4" class="tab-pane" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                              <p class="mbr-fonts-style panel-text display-7">
-                                <strong>
-                                  <ul>
-                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>oscillatore sinusoidale</b></a></li>
-                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/sintesi_additiva.maxpat" class="text-primary"><b>sintesi additiva</b></a></li>
-                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/am_rm.maxpat" class="text-primary"><b>am/rm</b></a></li>
-                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/fm.maxpat" class="text-primary"><b>fm</b></a></li>
-                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/poly.zipt" class="text-primary"><b>poly</b></a></li>
-                                  <li><a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/granulatore.maxpat" class="text-primary"><b>granulatore</b></a></li>
-                                    </ul>
-                                </strong>
-                                </p>
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                    Free Website Builder offers a huge collection of 2500+ website blocks, templates and
+                                    themes with thousands flexible options. Combine blocks from different themes to
+                                    create a unique mix.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab5" class="tab-pane" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                    prova</p>
                             </div>
                         </div>
                     </div>
