--- a/pages/learn/analisi.html
+++ b/pages/learn/analisi.html
@@ -109,7 +109,7 @@
                         <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi/analisi_della_musica_elettroacustica.html" class="text-primary"><b>Analisi della Musica Elettroacustica</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi/leggi_della_gestalt.html" class="text-primary"><b>Leggi della Gestalt</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi/mimetico_aurale.html" class="text-primary"><b>Mimetico-Aurale</b></a></li>
-                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi/mimetico_aurale.html" class="text-primary"><b>Tecniche di Analisi</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi/mimetico_aurale.html" class="text-primary"><b>Tecniche di Analisi Applicate al Video</b></a></li>
                     </ul>
                       </strong>
                       <br><br>
