--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -77,7 +77,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Metodi per l'Analisi</h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Analisi Compositiva</h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Tecniche di Analisi Applicate al Video</strong></h4>
             </div>
         </div>
@@ -128,7 +128,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi/mimetico_aurale.html">&lt; Previous</a>
                     <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
