--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -119,7 +119,18 @@
                   </h5>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <ul>
-                      <li><strong>00'00" - 00'20" - Scena 1:</strong> bianco/nero, uova, linee rosse orizzontali.</li>
+                      <li><strong>00'00" - 00'20" - Scena 01_01:</strong> bianco/nero, uova, linee rosse orizzontali</li>
+                      <li><strong>00'20" - 00'21" - Scena 02_01:</strong> farfalle</li>
+                      <li><strong>00'21" - 00'32" - Scena 01_02:</strong> variazione</li>
+                      <li><strong>00'32" - 00'36" - Scena 03_01:</strong> foglia, linee rosse orizzontali</li>
+                      <li><strong>00'36" - 00'40" - Scena 04_01:</strong> foglie, vermi, linee rosse orizzontali con impulso giallo</li>
+                      <li><strong>00'40" - 01'13" - Scena 05_01:</strong> bocciolo, farfalla, linee rosse/gialle orizzontali</li>
+                      <li><strong>01'13" - 01'15" - Scena 05_02:</strong> variazione</li>
+                      <li><strong>01'15" - 01'23" - Scena 02_02:</strong> variazione</li>
+                      <li><strong>01'23" - 01'24" - Scena 05_03:</strong> variazione</li>
+                      <li><strong>01'24" - 01'42" - Scena 02_03:</strong> variazione</li>
+                      <li><strong>01'42" - 01'44" - Scena 04_02:</strong> variazione</li>
+                      <li><strong>00'20" - 00'20" - Scena 2:</strong></li>
                     </ul>
                   </p>
               </div>
