--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -142,6 +142,10 @@
                       <li><strong>04'04" - 04'09" - Scena 07_02_03:</strong> variazione</li>
                     </ul>
                   </p>
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>SECONDA VISIONE</strong>
+                  </h5>
+
               </div>
           </div>
       </div>
