--- a/pages/learn.html
+++ b/pages/learn.html
@@ -136,7 +136,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="https://www.gabrielavelitch.com/assets/images/learn/analisi_stock.png" data-slide-to="3" data-bs-slide-to="3">
+                        <img src="https://www.gabrielavelitch.com/img/site/analisi_stock.webp" data-slide-to="3" data-bs-slide-to="3">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -159,7 +159,7 @@
           <div class="item features-image сol-12 col-md-6 col-lg-3">
               <div class="item-wrapper">
                   <div class="item-img">
-                      <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="1" data-bs-slide-to="1">
+                      <img src="https://www.gabrielavelitch.com/img/site/stockhausen.webp" data-slide-to="1" data-bs-slide-to="1">
                   </div>
                   <div class="item-content">
                       <h5 class="item-title mbr-fonts-style display-7">
